--- a/index.html
+++ b/index.html
@@ -26,19 +26,7 @@
         <img src="./spinner.gif">
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
-    <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyC2dK8mL5d_Y-wVb4v-NLA-pL7alEnWCp4",
-        authDomain: "bildebloggen-1dbd8.firebaseapp.com",
-        databaseURL: "https://bildebloggen-1dbd8.firebaseio.com",
-        projectId: "bildebloggen-1dbd8",
-        storageBucket: "bildebloggen-1dbd8.appspot.com",
-        messagingSenderId: "1062651001900"
-    };
-    firebase.initializeApp(config);
-    </script>
+    <!-- LIM INN FIREBASE_KODEN DIN HER -->
 
     <script src="./index.js"></script>
 </body>
